fixed top spacing behind menu

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -10,6 +10,8 @@ body {
 }
 .site-content {
   width: 100%;
+  margin-top: 42px;
+  padding: 0;
   // min-height: 632px;
 }
 .full-width-content {
@@ -21,7 +23,6 @@ body {
 .standard-width-content {
  width: 960px;
  margin: 0 auto;
- padding-top: 45px;
  padding-bottom: 60px;
 }
 .center-button {
@@ -197,12 +198,11 @@ nav {
   width:100%;
   height: 100%;
   position: fixed;
+  top: 42px;
   left: 0;
-  bottom: 0;
   z-index: -100
 }
 #jobs-index-map {
-  display: inline-block;
   width:100%;
   height:100%;
   background-color: #eee;
@@ -220,11 +220,9 @@ nav {
   top: -1000px !important;
 }
 #job-show-map {
-  // display: inline-block;
   width: 100%;
   height: 400px;
   background-color: #eee;
-  float: right;
 }
 .job-id {
   display: none;
